# datacraft-xeger

./: README.md  requirements.txt  setup.cfg
datacraft_xeger/: __init__.py  suppliers.py
tests/: test_datacraft_xeger.py
