[metadata]
name = datacraft-xeger
version = 0.1.0
description = Custom xeger type extensions for datacraft package
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/
author = Brian Buxton
author_email = bbux-dev@gmail.com
license = MIT

[options]
packages = find:

[options.packages.find]
exclude = tests, docs

install_requires =
    datacraft>=0.3.0
    rstr>=3.1.0

[options.entry_points]
datacraft.custom_type_loader =
    xeger = datacraft_xeger:load_custom

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
all =
    %(test)s