[metadata]
name = datacraft-xeger
version = 0.2.0
description = Custom xeger type extensions for datacraft package
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/bbux-dev/datacraft-xeger
author = Brian Buxton
author_email = bbux-dev@gmail.com
license = MIT

[options]
packages = find:

install_requires =
    datacraft>=0.7.1
    rstr

[options.packages.find]
exclude = tests, docs

[options.entry_points]
datacraft.custom_type_loader =
    xeger = datacraft_xeger:load_custom

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
all =
    %(test)s
